<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/main_alarm_above_main_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/defaultTimeZone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_alarm_time"/>

    <TextView
        android:id="@+id/main_alarm_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="124sp"
        android:layout_marginStart="8dp"
        android:text="@string/placeholder_time"
        app:layout_constraintVertical_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/main_alarm_ampm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        android:textSize="42sp"
        android:text="@string/placeholder_small"
        app:layout_constraintStart_toEndOf="@id/main_alarm_time"
        app:layout_constraintTop_toTopOf="@id/main_alarm_time"
        app:layout_constraintBottom_toBottomOf="@id/main_alarm_time" />

    <TextView
        android:id="@+id/main_alarm_time_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_alarm_time"/>

    <TextView
        android:id="@+id/main_alarm_members_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/main_alarm_time_user"
        android:text="@string/alarm_members_header"
        android:textSize="24sp"
        android:textColor="@color/textColorPrimary"
        android:gravity="center"
        android:padding="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_alarm_members"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_alarm_members_title"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>