<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activities.AlarmRingActivity">

    <pl.droidsonroids.gif.GifImageView
        android:background="@android:color/white"
        android:src="@drawable/alarm_dance"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="2"
        android:scaleY="2"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/ring_awake"

        android:text="@string/ring_awake_ask"
        android:textSize="32sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/ring_emergency_stop"

        android:text="@string/ring_emergency_stop"
        android:textSize="14sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ring_notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/ring_awake"
        app:layout_constraintEnd_toEndOf="@id/ring_awake"
        app:layout_constraintTop_toBottomOf="@id/ring_awake"

        android:text="@string/ring_ok_wait" />

</androidx.constraintlayout.widget.ConstraintLayout>